# chemistry-assistant

./: README.md
api-server/: Cargo.toml  README.md
discord/: Cargo.toml  README.md
discord/src/: lib.rs
fine-tune-model/: README.md  convert.py  train.csv  train.txt
rag-embeddings/: Cargo.toml  README.md  chemistry.txt  create_embeddings.wasm
rag-embeddings/src/: main.rs
